School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/div_Float_Int.deca
//Division d'un float avec un int dans un float
//
{
    float a = 9.0;
    int b = 3;
    float c = a/b;
}