School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_operations/div_Int_Float.deca
//Division d'un float avec un int dans un int
//Message d'erreur : Incompatibilité de type !
//

{
    float a = 9.0;
    int b = 3;
    int c = a/b;
}